--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -39,14 +39,18 @@
 		  "supportedLocales": [""],
 		  "fallbackLocale": ""
 		}
-	  }
-	},
-  "resources": {
-	  "css": [
-		{
-		  "uri": "css/style.css"
-		}
-	  ]
+	  },
+    "resources": {
+      "css": [
+      {
+        "uri": "css/style.css"
+      }
+      ]
+    },
+    "invoice": {
+      "type": "sap.ui.model.json.JSONModel",
+      "uri": "Invoices.json"
+      }
 	}
   }
 }
